--- a/frontend/pricing.html
+++ b/frontend/pricing.html
@@ -4,436 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduConnect - Pricing</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
+    <link rel="stylesheet" href="css/pricing.css">
 
-        body {
-            background-color: #f0f2f5;
-        }
-
-        /* Header Styles */
-        header {
-            background-color: white;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0.8rem 2rem;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-
-        .logo img {
-            height: 40px;
-        }
-
-        nav ul {
-            display: flex;
-            list-style: none;
-        }
-
-        nav ul li {
-            margin: 0 10px;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            padding: 8px 12px;
-            color: #555;
-            font-weight: 500;
-            position: relative;
-            transition: color 0.3s;
-        }
-
-        nav ul li a.active {
-            color: #4361ee;
-            font-weight: 600;
-        }
-
-        .animated-underline {
-            position: relative;
-            text-decoration: none;
-        }
-
-        .animated-underline::after {
-            content: '';
-            position: absolute;
-            width: 0;
-            height: 2px;
-            bottom: 0;
-            left: 0;
-            background-color: #1e40af; /* Blue color for the underline */
-            transition: width 0.3s ease-in-out;
-        }
-
-        .animated-underline:hover::after {
-            width: 100%;
-        }
-
-        .right-actions {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-        }
-
-        .credit-icon, .notification-icon {
-            font-size: 1rem;
-            cursor: pointer;
-        }
-
-        .account-container {
-            position: relative;
-            cursor: pointer;
-        }
-
-        .account-icon {
-            font-size: 1.2rem;
-        }
-
-        .account-dropdown {
-            position: absolute;
-            top: 100%;
-            right: 0;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-            width: 150px;
-            display: none;
-            padding: 8px 0;
-            z-index: 10;
-        }
-
-        .account-container:hover .account-dropdown {
-            display: block;
-        }
-
-        .dropdown-item {
-            display: block;
-            padding: 8px 15px;
-            text-decoration: none;
-            color: #333;
-            transition: background 0.2s;
-        }
-
-        .dropdown-item:hover {
-            background: #f5f5f5;
-            color: #4361ee;
-        }
-
-        .dropdown-divider {
-            height: 1px;
-            background: #eee;
-            margin: 5px 0;
-        }
-
-        /* Hero Banner */
-        .hero-section {
-            background: linear-gradient(135deg, #1a0049 0%, #3c4fe0 100%);
-            color: white;
-            padding: 4rem 0;
-            text-align: center;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-        }
-
-        .hero-content {
-            max-width: 600px;
-            padding: 0 2rem;
-        }
-
-        .hero-content h1 {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-        }
-
-        .hero-content p {
-            font-size: 1.2rem;
-            margin-bottom: 2rem;
-        }
-
-        .hero-button {
-            background-color: #ffd100;
-            color: #333;
-            padding: 0.8rem 2rem;
-            border-radius: 2rem;
-            font-weight: 600;
-            text-decoration: none;
-            display: inline-block;
-            transition: all 0.3s;
-        }
-
-        .hero-button:hover {
-            background-color: #e6bc00;
-            transform: translateY(-2px);
-        }
-
-        .hero-image {
-            max-width: 400px;
-        }
-
-        /* Pricing Section */
-        .pricing-section {
-            padding: 4rem 0;
-        }
-
-        .pricing-header {
-            text-align: center;
-            margin-bottom: 3rem;
-        }
-
-        .pricing-header h2 {
-            font-size: 2rem;
-            color: #333;
-            margin-bottom: 1rem;
-        }
-
-        .pricing-container {
-            display: flex;
-            justify-content: center;
-            gap: 2rem;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 1rem;
-        }
-
-        .pricing-card {
-            background: white;
-            border-radius: 10px;
-            overflow: hidden;
-            width: 350px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.05);
-            transition: transform 0.3s, box-shadow 0.3s;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .pricing-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-        }
-
-        .pricing-card-header {
-            padding: 2rem;
-            position: relative;
-        }
-
-        .lite-card {
-            background-color: #f2f3f7;
-        }
-
-        .gold-card {
-            background-color: #4361ee;
-            color: white;
-        }
-
-        .plan-name {
-            font-size: 1.8rem;
-            font-weight: 700;
-            margin-bottom: 0.5rem;
-        }
-
-        .plan-price {
-            font-size: 1.5rem;
-            font-weight: 600;
-            margin-bottom: 0.5rem;
-            text-align: right;
-        }
-
-        .plan-subtitle {
-            font-size: 0.9rem;
-            color: #777;
-            text-align: right;
-        }
-
-        .gold-card .plan-subtitle {
-            color: #e0e0ff;
-        }
-
-        .pricing-card-body {
-            padding: 2rem;
-            display: flex;
-            flex-direction: column;
-            flex-grow: 1;
-        }
-
-        .plan-includes {
-            font-weight: 600;
-            margin-bottom: 1.5rem;
-            color: #555;
-        }
-
-        .feature-list {
-            list-style: none;
-            margin-bottom: 2rem;
-            flex-grow: 1;
-        }
-
-        .feature-item {
-            display: flex;
-            align-items: flex-start;
-            margin-bottom: 1rem;
-            line-height: 1.4;
-        }
-
-        .feature-icon {
-            color: #4361ee;
-            margin-right: 10px;
-            font-weight: bold;
-        }
-
-        .see-features {
-            text-align: center;
-            margin-top: auto;
-            margin-bottom: 1rem;
-            color: #4361ee;
-            text-decoration: none;
-            font-size: 0.9rem;
-            display: block;
-        }
-
-        .choose-plan-btn {
-            display: block;
-            width: 100%;
-            padding: 1rem;
-            background: #4361ee;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            font-weight: 600;
-            text-align: center;
-            cursor: pointer;
-            text-decoration: none;
-            transition: background 0.3s;
-        }
-
-        .choose-plan-btn:hover {
-            background: #3250d4;
-        }
-
-        /* Footer */
-        footer {
-            background: linear-gradient(135deg, #0a0057 0%, #2a3990 100%);
-            color: white;
-            padding: 2rem 5rem;
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .footer-logo {
-            width: 20%;
-        }
-
-        .footer-logo img {
-            max-width: 80px;
-        }
-
-        .footer-tagline {
-            font-size: 0.9rem;
-            margin-top: 1rem;
-            line-height: 1.5;
-        }
-
-        .footer-links {
-            display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
-        }
-
-        .footer-links a {
-            text-decoration: none;
-            color: #ccc;
-            font-size: 0.9rem;
-            transition: color 0.3s;
-        }
-
-        .footer-links a:hover {
-            color: white;
-        }
-
-        .footer-socials h3 {
-            font-size: 1rem;
-            margin-bottom: 1rem;
-            color: var(--white); 
-        }
-
-        /* Container for the list of icons */
-        .social-icons-list {
-            display: flex;      
-            flex-wrap: wrap;     
-            gap: 12px;          
-        }
-
-        /* Styling for each icon's link container */
-        .social-icon-item {
-            display: inline-block; 
-            width: 30px;           
-            height: 30px;         
-            line-height: 0;        
-            transition: transform 0.2s ease; 
-        }
-
-        .social-icon-item:hover {
-            transform: scale(1.1); 
-        }
-
-        .social-icon-item img {
-            width: 100%;           
-            height: 100%;          
-            object-fit: contain;   
-            display: block;       
-        }
-
-        .social-icon {
-            background: rgba(255,255,255,0.2);
-            width: 25px;
-            height: 25px;
-            border-radius: 5px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 0.7rem;
-            color: white;
-        }
-
-        @media (max-width: 768px) {
-            .hero-section {
-                flex-direction: column;
-                padding: 3rem 1rem;
-            }
-
-            .hero-content {
-                margin-bottom: 2rem;
-            }
-
-            .pricing-container {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .pricing-card {
-                width: 100%;
-                max-width: 350px;
-                margin-bottom: 2rem;
-            }
-
-            footer {
-                flex-direction: column;
-                gap: 2rem;
-                padding: 2rem;
-            }
-
-            .footer-logo {
-                width: 100%;
-            }
-        }
-    </style>
 </head>
 <body>
     <header>
