--- a/frontend/educonnectGPT.html
+++ b/frontend/educonnectGPT.html
@@ -4,486 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduConnect - EduconnectGPT</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
+    <link rel="stylesheet" href="css/educonnectGPT.css">
 
-        body {
-            background-color: #f0f2f5;
-        }
-
-        /* Header Styles */
-        header {
-            background-color: white;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0.8rem 2rem;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-
-        .logo img {
-            height: 40px;
-        }
-
-        nav ul {
-            display: flex;
-            list-style: none;
-        }
-
-        nav ul li {
-            margin: 0 10px;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            padding: 8px 12px;
-            color: #555;
-            font-weight: 500;
-            position: relative;
-            transition: color 0.3s;
-        }
-
-        nav ul li a.active {
-            color: #4361ee;
-            font-weight: 600;
-        }
-
-        .animated-underline {
-            position: relative;
-            text-decoration: none;
-        }
-
-        .animated-underline::after {
-            content: '';
-            position: absolute;
-            width: 0;
-            height: 2px;
-            bottom: 0;
-            left: 0;
-            background-color: #1e40af; /* Blue color for the underline */
-            transition: width 0.3s ease-in-out;
-        }
-
-        .animated-underline:hover::after {
-            width: 100%;
-        }
-
-        .right-actions {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-        }
-
-        .credit-icon, .notification-icon {
-            font-size: 1rem;
-            cursor: pointer;
-        }
-
-        .account-container {
-            position: relative;
-            cursor: pointer;
-        }
-
-        .account-icon {
-            font-size: 1.2rem;
-        }
-
-        .account-dropdown {
-            position: absolute;
-            top: 100%;
-            right: 0;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-            width: 150px;
-            display: none;
-            padding: 8px 0;
-            z-index: 10;
-        }
-
-        .account-container:hover .account-dropdown {
-            display: block;
-        }
-
-        .dropdown-item {
-            display: block;
-            padding: 8px 15px;
-            text-decoration: none;
-            color: #333;
-            transition: background 0.2s;
-        }
-
-        .dropdown-item:hover {
-            background: #f5f5f5;
-            color: #4361ee;
-        }
-
-        .dropdown-divider {
-            height: 1px;
-            background: #eee;
-            margin: 5px 0;
-        }
-
-        /* EduconnectGPT Interface Styles */
-        .ai-interface {
-            max-width: 1200px;
-            margin: 2rem auto;
-            display: flex;
-            gap: 20px;
-        }
-
-        .sidebar {
-            width: 260px;
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            padding: 20px;
-            height: calc(100vh - 120px); /* Match chat container height */
-            overflow-y: auto; /* Add scroll if content overflows */
-        }
-
-        .ai-title {
-            font-size: 1.5rem;
-            font-weight: 600;
-            margin-bottom: 1rem;
-            color: #333;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .model-selector {
-            width: 100%;
-            display: flex;
-            align-items: center;
-            padding: 12px 20px; /* Increased padding */
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            margin-bottom: 20px;
-            font-weight: 500;
-            cursor: pointer;
-            transition: all 0.3s;
-        }
-
-        .model-selector span:first-child {
-            flex: 1;
-            white-space: nowrap; /* Prevents text from wrapping */
-            overflow: hidden;    /* Hides overflow */
-            text-overflow: ellipsis; /* Shows ... if text overflows */
-            margin-right: 15px;  /* Adds space between text and dropdown arrow */
-        }
-
-        .model-selector span:last-child {
-            flex: 0 0 auto; /* Prevents the arrow from taking extra space */
-        }
-
-        .agent-list {
-            list-style: none;
-        }
-
-        .agent-item {
-            display: flex;
-            align-items: center;
-            padding: 10px;
-            border-radius: 8px;
-            margin-bottom: 10px;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-
-        .agent-item:hover {
-            background-color: #f0f2f5;
-        }
-
-        .agent-item.selected {
-            background-color: #e0e7ff;
-        }
-
-        .agent-icon {
-            width: 30px;
-            height: 30px;
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-right: 10px;
-            font-size: 1.2rem;
-            background-color: #f0f2f5;
-        }
-
-        .agent-name {
-            font-weight: 500;
-        }
-
-        .section-title {
-            font-size: 1rem;
-            font-weight: 600;
-            margin: 1.5rem 0 1rem;
-            color: #666;
-        }
-
-        .chat-container {
-            flex: 1;
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            display: flex;
-            flex-direction: column;
-            height: calc(100vh - 120px); /* Adjusted height */
-        }
-
-        .chat-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 20px;
-            border-bottom: 1px solid #eee;
-        }
-
-        .theme-toggle {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .theme-icon {
-            padding: 5px;
-            border-radius: 50%;
-            background-color: #f0f2f5;
-            cursor: pointer;
-        }
-
-        .chat-messages {
-            flex: 1;
-            padding: 20px;
-            overflow-y: auto;
-            background-color: #f9fafc;
-        }
-
-        .message {
-            margin-bottom: 20px;
-            display: flex;
-            align-items: flex-start;
-        }
-
-        .message-avatar {
-            width: 36px;
-            height: 36px;
-            border-radius: 50%;
-            margin-right: 15px;
-            overflow: hidden;
-            flex-shrink: 0; /* Prevent avatar from shrinking */
-        }
-
-        .message-avatar img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .message-content {
-            flex: 1;
-            background-color: white;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-            word-wrap: break-word; /* Ensure long words wrap */
-        }
-
-        .message.user .message-content {
-            background-color: #e0e7ff;
-        }
-
-        .message-time {
-            font-size: 0.8rem;
-            color: #888;
-            margin-top: 5px;
-            text-align: right;
-        }
-
-        .chat-input-container {
-            padding: 15px 20px;
-            border-top: 1px solid #eee;
-        }
-
-        .chat-input-wrapper {
-            display: flex;
-            align-items: center;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            padding: 5px 15px; /* Adjusted padding */
-        }
-
-        .chat-input {
-            flex: 1;
-            border: none;
-            outline: none;
-            padding: 10px 0; /* Adjusted padding */
-            resize: none;
-            font-size: 0.95rem;
-            max-height: 100px; /* Limit growth */
-            overflow-y: auto; /* Add scroll if needed */
-        }
-
-        .chat-actions {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            margin-left: 10px; /* Add space between textarea and actions */
-        }
-
-        .chat-action {
-            font-size: 1.1rem;
-            color: #666;
-            cursor: pointer;
-        }
-
-        .send-button {
-            width: 36px;
-            height: 36px;
-            border-radius: 50%;
-            background-color: #4361ee;
-            color: white;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            transition: background 0.3s;
-            flex-shrink: 0; /* Prevent button from shrinking */
-        }
-
-        .send-button:hover {
-            background-color: #3651d8;
-        }
-
-        /* Footer */
-        footer {
-            background: linear-gradient(135deg, #0a0057 0%, #2a3990 100%);
-            color: white;
-            padding: 2rem 5rem;
-            display: flex;
-            justify-content: space-between;
-            margin-top: 2rem; /* Keep margin */
-            flex-wrap: wrap; /* Allow wrapping on smaller screens */
-            gap: 20px; /* Add gap between footer items */
-        }
-
-        .footer-logo {
-            width: 20%;
-            min-width: 150px; /* Ensure logo area doesn't get too small */
-        }
-
-        .footer-logo img {
-            max-width: 80px;
-        }
-
-        .footer-tagline {
-            font-size: 0.9rem;
-            margin-top: 1rem;
-            line-height: 1.5;
-        }
-
-        .footer-links {
-            display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
-            min-width: 150px;
-        }
-
-        .footer-links a {
-            text-decoration: none;
-            color: #ccc;
-            font-size: 0.9rem;
-            transition: color 0.3s;
-        }
-
-        .footer-links a:hover {
-            color: white;
-        }
-
-        .footer-socials {
-            min-width: 150px;
-        }
-
-        .footer-socials h3 {
-            font-size: 1rem;
-            margin-bottom: 1rem;
-            color: white;
-        }
-
-        /* Container for the list of icons */
-        .social-icons-list {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 12px;
-        }
-
-        /* Styling for each icon's link container */
-        .social-icon-item {
-            display: inline-block;
-            width: 30px;
-            height: 30px;
-            line-height: 0;
-            transition: transform 0.2s ease;
-        }
-
-        .social-icon-item:hover {
-            transform: scale(1.1);
-        }
-
-        .social-icon-item img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-            display: block;
-        }
-
-        /* Loading spinner styles */
-        .typing-indicator {
-            display: flex;
-            align-items: center;
-            margin-bottom: 20px;
-            /* Keep avatar alignment */
-            padding-left: 51px; /* 36px avatar width + 15px margin */
-        }
-
-        .spinner-container {
-            display: flex;
-            align-items: center;
-            background-color: white;
-            padding: 10px 15px; /* Adjusted padding */
-            border-radius: 10px;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-        }
-
-        .spinner {
-            width: 20px; /* Slightly smaller spinner */
-            height: 20px;
-            border: 3px solid #f3f3f3;
-            border-top: 3px solid #4361ee;
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-            margin-right: 10px;
-        }
-
-        .typing-text {
-            color: #666;
-            font-size: 0.9rem;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-    </style>
 </head>
 <body>
     <!-- Header remains the same -->
