--- a/frontend/setting.html
+++ b/frontend/setting.html
@@ -318,5 +318,7 @@
                 </a>
             </div>
         </div>
+    </footer>
+    <script src="js/setting.js"></script>
 </body>
 </html>
