--- a/frontend/chat.html
+++ b/frontend/chat.html
@@ -25,10 +25,11 @@
             </ul>
         </nav>
         <div class="right-actions">
-             <span class="credit-icon">0.0 $</span>
-            <i class="fas fa-bell notification-icon"></i>
+            <div class="credit-icon">0.0 $</div>
+            <a href="notification.html" class="notification-icon" style="text-decoration: none;">🔔</a>
+            <!-- Updated account icon with dropdown -->
             <div class="account-container">
-                 <i class="fas fa-user-circle account-icon"></i>
+                <div class="account-icon">👤</div>
                 <div class="account-dropdown">
                     <a href="profile.html" class="dropdown-item">Profile</a>
                     <a href="setting.html" class="dropdown-item">Setting</a>
