--- a/frontend/quiz.html
+++ b/frontend/quiz.html
@@ -15,14 +15,14 @@
         <nav>
             <ul>
                 <!-- Use placeholder links or actual paths -->
-                <li><a href="home.html" class="nav-item animated-underline">Home</a></li>
-                <li><a href="review.html" class="nav-item animated-underline">Tutors</a></li>
-                <li><a href="ranking.html" class="nav-item animated-underline">Ranking</a></li>
-                <li><a href="support.html" class="nav-item animated-underline">Support</a></li>
-                <li><a href="educonnectGPT.html" class="nav-item animated-underline">EduconnectGPT</a></li>
-                <li><a href="chat.html" class="nav-item animated-underline">Chat</a></li>
-                <li><a href="schedule.html" class="nav-item animated-underline">Schedule</a></li>
-                <li><a href="quiz.html" class="nav-item active">Quiz Generation</a></li>
+                <li><a href="/home" class="nav-item animated-underline">Home</a></li>
+                <li><a href="/review" class="nav-item animated-underline">Tutors</a></li>
+                <li><a href="/ranking" class="nav-item animated-underline">Ranking</a></li>
+                <li><a href="/support" class="nav-item animated-underline">Support</a></li>
+                <li><a href="/educonnectGPT" class="nav-item animated-underline">EduconnectGPT</a></li>
+                <li><a href="/chat" class="nav-item animated-underline">Chat</a></li>
+                <li><a href="/schedule" class="nav-item animated-underline">Schedule</a></li>
+                <li><a href="/quiz" class="nav-item active">Quiz Generation</a></li>
             </ul>
         </nav>
         <div class="right-actions">
