--- a/frontend/notification.html
+++ b/frontend/notification.html
@@ -24,17 +24,15 @@
         </nav>
         <div class="right-actions">
             <div class="credit-icon">0.0 $</div>
-            <a href="notification.html" class="notification-icon" style="text-decoration: none;">
-                🔔
-            </a>
+            <a href="#" class="notification-icon" style="text-decoration: none;">🔔</a>
             <div class="account-container">
                 <div class="account-icon">👤</div>
                 <div class="account-dropdown">
-                    <a href="profile.html" class="dropdown-item">Profile</a>
-                    <a href="setting.html" class="dropdown-item">Setting</a>
-                    <a href="pricing.html" class="dropdown-item">Pricing</a>
+                    <a href="/profile" class="dropdown-item">Profile</a>
+                    <a href="/setting" class="dropdown-item">Setting</a>
+                    <a href="/pricing" class="dropdown-item">Pricing</a>
                     <div class="dropdown-divider"></div>
-                    <a href="login.html" class="dropdown-item">Sign out</a>
+                    <a href="/login" class="dropdown-item">Sign out</a>
                 </div>
             </div>
         </div>
