--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -41,10 +41,10 @@
     <div class="main-content">
         <div class="profile-header">
             <div class="profile-avatar">
-                <img src="images\Lê Nguyễn Thanh Bình.jpg" alt="Lê Nguyễn Thanh Bình"> 
+                <img src="images\images\4.png" alt="User"> 
             </div>
             <div class="profile-info">
-                <h1 class="profile-name">Lê Nguyễn Thanh Bình</h1>
+                <h1 class="profile-name">User</h1>
                 <div class="profile-title">Computer Science Student</div>
                 <p>Passionate learner focused on web development, AI, and data science.</p>
                 
