--- a/frontend/match.html
+++ b/frontend/match.html
@@ -59,10 +59,10 @@
                 <div class="tutor-card" id="tutor1">
                     <div class="tutor-label">Student</div>
                     <div class="tutor-image">
-                        <img src="images/Lê Nguyễn Thanh Bình.jpg" alt="Lê Nguyễn Thanh Bình">
+                        <img src="images\images\4.png" alt="user">
                     </div>
                     <div class="tutor-info">
-                        <h3 class="tutor-name">Lê Nguyễn Thanh Bình</h3>
+                        <h3 class="tutor-name">users</h3>
                         <div class="tutor-buttons">
                             <a href="#" class="tutor-seemore-btn">See more</a>
                             <!-- Note: Student card doesn't have a message button or details area -->
