--- a/frontend/schedule.html
+++ b/frontend/schedule.html
@@ -108,7 +108,16 @@
                     <div class="calendar-day other-month"><span class="day-number">03</span></div>
 
                     <!-- Schedule Events -->
-
+                    <!-- <div id="event-thao-math" class="calendar-event event-blue">
+                        <i class="fas fa-calculator"></i>
+                        Math with Nguyễn Thị Thảo
+                        <span class="event-time">13:00 - 15:30</span>
+                    </div>
+                    <div id="event-thao-english" class="calendar-event event-green">
+                        <i class="fas fa-book"></i>
+                        Math with Nguyễn Thị Thảo
+                        <span class="event-time">13:00 - 15:30</span>
+                    </div> -->
                 </div> <!-- End calendar-grid -->
             </div> <!-- End calendar-container -->
 
