update linh tinh

--- a/frontend/educonnectGPT.html
+++ b/frontend/educonnectGPT.html
@@ -57,13 +57,13 @@
                     <div class="agent-icon">🔢</div> <!-- Changed icon -->
                     <div class="agent-name">EduconnectGPT</div>
                 </div>
-                 <a href="quiz.html" style="text-decoration: none; color: inherit;">
+                 <a href="/quiz" style="text-decoration: none; color: inherit;">
                     <div class="agent-item" id="quiz-agent">
                         <div class="agent-icon">📝</div>
                         <div class="agent-name">Quiz Generation</div>
                     </div>
                 </a>
-                <a href="summarization.html" style="text-decoration: none; color: inherit;">
+                <a href="/summarization" style="text-decoration: none; color: inherit;">
                     <div class="agent-item" id="summarization-agent">
                         <div class="agent-icon">📄</div>
                         <div class="agent-name">Lecture Summarization</div>
