--- a/frontend/quiz.html
+++ b/frontend/quiz.html
@@ -49,7 +49,7 @@
 
             <nav class="agent-list">
                  <div class="agent-item" id="main-agent">
-                    <a href="educonnectGPT.html">
+                    <a href="/educonnectGPT">
                         <div class="agent-icon">🔢</div>
                         <div class="agent-name">EduconnectGPT</div>
                     </a>
@@ -60,7 +60,7 @@
                     <div class="agent-name">Quiz Generation</div>
                 </div>
                  <div class="agent-item" id="summarization-agent">
-                    <a href="summarization.html">
+                    <a href="/summarization">
                         <div class="agent-icon">📄</div> <!-- Summarization icon -->
                         <div class="agent-name">Lecture Summarization</div>
                     </a>
